basic setup - mapper for DTO and extension of enumeration types